--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "bun oxlint"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "oxlint": "0.4.4",
     "prettier": "3.3.2"
   },
