services for products

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "module": "index.js",
   "scripts": {
-    "dev": "node --env-file .env --watch index.js",
+    "dev": "node --env-file .env --watch server.js",
     "lint": "bun oxlint"
   },
   "devDependencies": {
