settings for deploy [start command]

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "module": "index.js",
   "scripts": {
     "dev": "node --env-file .env --watch server.js",
+    "start": "node server.js",
     "lint": "bun oxlint"
   },
   "devDependencies": {
