--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
   "scripts": {
     "dev": "node --env-file .env --watch api/server.js",
     "start": "node api/server.js",
-    "lint": "bun oxlint"
+    "lint": "bun oxlint",
+
+    "db:up": "sudo docker compose --env-file ./.env up -d postgres",
+    "pg:up": "sudo docker compose up -d pgadmin",
+    "dev:up": "sudo docker compose  --env-file ./.env up -d",
+
+    "docker:ls": "sudo docker compose ps",
+    "db:run": "sudo docker compose exec postgres bash",
+
+    "db:dw": "sudo docker compose down postgres",
+    "pg:dw": "sudo docker compose down pgadmin",
+    "dev:dw": "sudo docker compose down"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
