[feat] running first settings for migrations

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,8 @@
+const path = require('path');
+
 module.exports = {
-  'config': './api/db/config.js',
-  'models-paths': './api/db/models/',
-  'migrations-paths': './api/db/migrations/',
-  'seeders-paths': './api/db/seeders/',
+  'config': path.resolve('.', 'api', 'db', 'config.js'),
+  'models-path': path.resolve('.', 'api', 'db', 'models'),
+  'seeders-path': path.resolve('.', 'api', 'db', 'seeders'),
+  'migrations-path': path.resolve('.', 'api', 'db', 'migrations')
 }
